Grammar
stmt  : assn ';'
assn  : id '=' expr
expr  : term addop expr
      | term
term  : fact mulop term
      | fact
fact  : id 
      | num
      | '(' expr ')'
      | ‘-‘ fact
addop : '+'
      | '-'
mulop : '*'
      | '/'
relop : '>'
	  | '<'
	  | '>='
	  | '<='
	  | '<>'
	  | '=='
